<resources>
    <string name="app_name">TeDi</string>
    <string name="label_version">v.0.0.1</string>
    <string name="label_welcome">Selamat Datang !</string>
    <string name="label_login_with_email_and_password">Silakan masuk dengan email dan password kamu.</string>
    <string name="label_email">Surel*</string>
    <string name="hint_email">Contoh : bintangputera@gmail.com</string>
    <string name="label_password">Password</string>
    <string name="action_login">Masuk</string>
    <string name="label_or">atau</string>
    <string name="action_login_with_google">Masuk dengan Google</string>
    <string name="label_doesnt_have_account">Belum punya akun ?</string>
    <string name="label_register_here">Daftar disini</string>
    <string name="label_create_account">Buat Akun</string>
    <string name="label_register_instruction">Buat akun dengan email dan \npassword kamu.</string>
    <string name="label_fullname">Nama Lengkap</string>
    <string name="hint_password">Minimal 8 karakter</string>
    <string name="hint_fullname">Contoh : Bintang Putera</string>
    <string name="label_confirm_password">Konfirmasi Password</string>
    <string name="hint_confirm_password">Password harus sama</string>
    <string name="action_register">Daftar</string>
    <string name="action_register_with_google">Daftar dengan Google</string>
    <string name="label_have_account">Sudah punya akun ?</string>
    <string name="label_login_here">Masuk disini</string>
    <string name="label_skip">Skip ></string>
    <string name="label_welcome_enablers">Selamat Datang, TeDinians!</string>
    <string name="label_message_for_enablers">Salam hangat dari kami untuk para pengguna aplikasi ini, TeDinians.</string>
    <string name="action_lanjut">Lanjut</string>
    <string name="label_enjoy_feature">Nikmati berbagai fitur aksesibilitas!</string>
    <string name="label_enjoy_the_feature">Aplikasi ini memiliki 4 fitur, yaitu Penerjemah BISINDO, Pendeteksi Mata Uang, Pendeteksi Objek, dan Pendeteksi Teks.</string>
    <string name="action_start">Mulai</string>
    <string name="action_finish">Selesai</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_TeDi">TeDi</string>
    <string name="menu_profile">Profil</string>
    <string name="label_dummy_welcome">Selamat Datang, Bintang !</string>
    <string name="label_feature">Fitur</string>
    <string name="label_bisindo_translator">Penerjemah BISINDO</string>
    <string name="label_currency_detection">Pendeteksi Mata Uang</string>
    <string name="label_text_detection">Pendeteksi Teks</string>
    <string name="label_dummy_name">Bintang Putera</string>
    <string name="label_dummy_email">bintangputera@gmail.com</string>
    <string name="label_my_account">Akun Saya</string>
    <string name="label_help">Bantuan</string>
    <string name="label_fqa">Tanya Jawab</string>
    <string name="label_report_bug"><u>Laporkan Masalah</u></string>
    <string name="action_logout">Keluar</string>
    <string name="message_information">Informasi</string>
    <string name="message_login_failed">Username atau Password salah, silahkan coba lagi</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="hint_password_login">*********</string>
    <string name="message_logout_confirmation">Anda yakin ingin keluar ?</string>
    <string name="label_change_password">Ganti Password</string>
    <string name="label_old_password">Password Lama</string>
    <string name="label_new_password">Password baru</string>
    <string name="action_save">Simpan</string>
    <string name="title_my_account">Akun Saya</string>
    <string name="label_activate_talkback"><u>Ketuk disini untuk mengaktfikan fitur Talkback</u></string>
    <string name="label_try_ayo_camera">Coba AYO Kamera!</string>
    <string name="label_TeDi_agreement">Dengan membuat akun berarti kamu setuju dengan <b><u>Ketentuan Layanan TeDi</u></b></string>
    <string name="label_about_TeDi">Tentang TeDi</string>
    <string name="label_bug_happen">Terjadi masalah ?</string>
    <string name="label_help_to_report_bug">Bantu kami menjadi lebih baik dengan laporkan masalahmu!</string>
    <string name="label_name">Nama*</string>
    <string name="label_identity">Identitas</string>
    <string name="label_report">Laporan</string>
    <string name="label_required">*Wajib diisi</string>
    <string name="label_user_understand">Saya Mengerti</string>
    <string name="label_term_and_agreement"><b>Syarat &amp; Ketentuan</b>\nDiperbarui pada 2022-06-10\n\n<b>Ketentuan Umum</b>\nDengan mengakses dan melakukan pemesanan dengan , Anda mengonfirmasi bahwa Anda setuju dan terikat dengan persyaratan layanan yang tercantum dalam Syarat &amp; Ketentuan yang diuraikan di bawah ini. Persyaratan ini berlaku untuk seluruh situs web dan email atau jenis komunikasi lainnya antara Anda.\n\nDalam keadaan apa pun tim tidak bertanggung jawab atas segala kerusakan langsung, tidak langsung, khusus, insidental atau konsekuensial, termasuk, namun tidak terbatas pada, kehilangan data atau keuntungan, yang timbul dari penggunaan, atau ketidakmampuan untuk menggunakan, materi di situs ini. , bahkan jika tim atau perwakilan resmi telah diberitahu tentang kemungkinan kerusakan tersebut. Jika penggunaan Anda atas materi dari situs ini mengakibatkan perlunya servis, perbaikan, atau koreksi peralatan atau data, Anda menanggung semua biayanya.\n\nTidak akan bertanggung jawab atas hasil apa pun yang mungkin terjadi selama penggunaan sumber daya kami. Kami berhak untuk mengubah harga dan merevisi kebijakan penggunaan sumber daya setiap saat.\n\n<b>Lisensi</b>\nTeDi memberi Anda lisensi terbatas yang dapat dibatalkan, non-eksklusif, tidak dapat dialihkan, untuk mengunduh, menginstal, dan menggunakan layanan kami secara ketat sesuai dengan ketentuan Perjanjian ini. Syarat &amp; Ketentuan ini adalah kontrak antara Anda dan TeDi (dalam Syarat &amp; Ketentuan ini disebut sebagai "TeDi", atau "milik kami"), penyedia situs web TeDi dan layanan yang dapat diakses dari situs web TeDi (yang secara bersama-sama disebut dalam Syarat &amp; Ketentuan ini sebagai "Layanan TeDi").\n\nAnda setuju untuk terikat dengan Syarat &amp; Ketentuan ini. Jika Anda tidak menyetujui Syarat &amp; Ketentuan ini, mohon untuk tidak menggunakan Layanan. Dalam Syarat &amp; Ketentuan ini, "Anda" merujuk kepada Anda sebagai individu dan entitas yang Anda wakili. Jika Anda melanggar salah satu dari Syarat &amp; Ketentuan ini, kami berhak untuk membatalkan akun Anda atau memblokir akses ke akun Anda tanpa pemberitahuan.</string>
    <string name="label_emergency_contact">Kontak Darurat : %1$s</string>
    <string name="label_beranda_menu">Tombol Menuju Beranda</string>
    <string name="label_tedi_menu">Tombol Menuju Halaman Fitur Tedi</string>
    <string name="label_profil_menu">Tombol Menuju Halaman Profil</string>
    <string name="label_fragmentHome_page">Anda Berada pada Beranda TeDi</string>
    <string name="label_welcome_home">Selamat Datang, %1$s</string>
    <string name="label_textDetection">Fitur Deteksi Teks</string>
    <string name="label_signLanguage">Fitur BISINDO</string>
    <string name="label_objectDetection">Fitur Deteksi Objek</string>
    <string name="label_currencyDetection">Fitur Deteksi Uang</string>
    <string name="label_color_detection">Fitur Deteksi Warna</string>
    <string name="label_family_help">Family Help</string>
    <string name="label_signLanguage_page">Halaman Penerjemaha Bisindo Dipilih</string>
    <string name="label_signLanguage_previewView">Anda Berada Pada Fitur Penerjemah Bisindo</string>
    <string name="label_signLanguage_cardView">Hasil Terjemahan BISINDO</string>
    <string name="label_signLanguage_terjemahan">Terjemahan</string>
    <string name="label_object_detection_page">Halaman Deteksi Objek Dipilih</string>
    <string name="label_object_detection_previewView">Anda Berada pada fitur deteksi Objek</string>
    <string name="label_object_detection_imageViewSound">Fitur Aktivasi Suara Objek Deteksi</string>
    <string name="label_currency_detection_page">Halaman Deteksi Uang Dipilih</string>
    <string name="label_currency_pv">Anda berada pada Fitur Deteksi Uang</string>
    <string name="label_currency_imageViewSound">Fitur aktivasi suara Deteksi Uang</string>
    <string name="label_color_detection_page">Halaman Deteksi Warna Dipilih</string>
    <string name="label_color_btn">Tombol Penangkap Gambar</string>
    <string name="label_color_pb">Mempersiapkan Fitur Deteksi Warna anda</string>
    <string name="label_color_previewView">Anda Berada Pada Fitur Deteksi Warna</string>
    <string name="label_text_page">Halaman Teks Dipilih</string>
    <string name="label_text_btn">Tombol Untuk Menangkap Gambar</string>
    <string name="question_1_obj_detection"> Ada apa saja Didepan saya ?</string>
    <string name="question_2_obj_detection">Ada berapa orang didepan saya</string>
    <string-array name="questionsObjectDetection">
        <item>@string/question_1_obj_detection</item>
        
    </string-array>
    <string name="response_1_obj_detection">Didepan anda terdapat  %s</string>
    <string name="args_binding_obj">deteksiObjek</string>
    <string name="args_binding_currency">deteksiUang</string>
    <string name="args_binding_color">deteksiWarna</string>
    <string name="args_binding_text">deteksiTeks</string>
    <string name="question_1_currency_detection">Lembaran uang berapa saja yang saya miliki ?</string>
    <string name="question_2_currency_detection">Berapa banyak uang yang saya pegang ?</string>
    <string-array name="questionsCurrencyDetection">
        <item>@string/question_1_currency_detection</item>
        

    </string-array>
    <string name="response_1_currency_detection">Uang yang terdeteksi adalah %1$s </string>
    <string name="response_2_currency_detection">Total jumlah uang terdeteksi adalah %s Ribu Rupiah</string>
    <string name="response_no_detection_object_detection">Tidak ada Objek yang terdeteksi</string>
    <string name="response_no_detection_currency_detection">Tidak ada Item Uang terdeteksi</string>
    <string name="response_1_color_detection">Warna yang terdeteksi adalah warna </string>
    <string-array name="ModelArray">
        <item>SignlanguageModel</item>
        <item>ObjectDetectionModel</item>
        <item>CurrencyModel</item>
    </string-array>
    <string name="signLanguageModelCloud">SignLanguageModel</string>
    <string name="objectDetectorModelCloud">ObjectDetectionModel</string>
    <string name="currencyModelCloud">CurrencyModel</string>
    <string name="label_hint_use">Petunjuk Penggunaan</string>
    <string name="label_for_all_disabilities">Dapat digunakan semua jenis disabilitas.</string>
    <string name="label_talkback_need_to_activate">Bagi penyandang tuna netra, aplikasi ini optimal digunakan dengan mengaktifkan fitur Talkback pada pengaturan.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_skip_login">Lewati Masuk</string>
    <string name="label_warning">Perhatian !</string>
    <string name="label_warning_message">Dengan melewati masuk, anda hanya bisa mengakses beberapa fitur.</string>
    <string name="label_i_understand">Saya Mengerti</string>
    <string name="action_report">Laporkan</string>
    <string name="default_web_client">76310350536-ttu13i6g4j27lm8hg06dvp3fj771ha5t.apps.googleusercontent.com</string>
    <string name="label_report_char_counter">0/300</string>
    <string name="title_report_bug">Laporkan Masalah</string>
    <string name="message_report_success">Laporan berhasil ditambahkan</string>
    <string name="message_must_not_null">Nama tidak boleh kosong</string>
    <string name="message_email_not_null">Surel tidak boleh kosong</string>
    <string name="text_detection">Fitur Deteksi Teks </string>
    <string name="label_object_detection">Pendeteksi Objek</string>
</resources>