<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/label_fragmentHome_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeWithName"
        android:text="@string/label_welcome_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextContent.Header"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_layout_banner"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeWithName"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeWithName"/>

    <TextView
        android:id="@+id/tvFeatureTitle"
        android:text="@string/label_feature"
        android:textSize="@dimen/dimen_24sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        style="@style/TextContent.SemiBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBanner"/>
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:rowCount="2"
        android:columnCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/tvFeatureTitle">

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnTextDetection"
            android:layout_width="0dp"
            android:contentDescription="@string/label_textDetection"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:titleMenu="@string/text_detection"
            app:iconMenu="@drawable/ic_text_detection"
            app:isBeta="false"/>

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnObjectDetection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/label_objectDetection"
            app:titleMenu="@string/label_object_detection"
            app:iconMenu="@drawable/ic_object_detection"
            app:isBeta="false"/>

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnBisindoTranslator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/label_signLanguage"
            app:titleMenu="@string/label_bisindo_translator"
            app:iconMenu="@drawable/ic_bisindo_translator"
            app:isBeta="false"/>

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnCurrencyDetection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/label_currencyDetection"
            app:titleMenu="@string/label_currency_detection"
            app:iconMenu="@drawable/ic_currency_detection"
            app:isBeta="false"/>

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnColorDetection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:contentDescription="@string/label_color_detection"
            app:titleMenu="@string/label_color_detection"
            app:iconMenu="@drawable/ic_color_detection"/>

        <com.devtedi.tedi.presentation.view.TediMainMenuButton
            android:id="@+id/btnFamilyHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:titleMenu="@string/label_family_help"
            app:iconMenu="@drawable/ic_family_help"/>

        <Button
            android:id="@+id/btnSettingsTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="Halo Bang"
            />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>