<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/dimen_124dp"
        android:layout_height="@dimen/dimen_124dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/colorDarkGrey" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dummy_name"
        android:layout_marginTop="@dimen/dimen_16dp"
        style="@style/TextContent.Header"
        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

    <TextView
        android:id="@+id/tvFullEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dummy_email"
        style="@style/TextContent.SubTitle"
        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"/>

    <com.bintangpoetra.thisable.presentation.view.ThisableSettingButton
        android:id="@+id/btnMyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:menuIcon="@drawable/ic_profile_settings"
        app:menuTitle="@string/label_my_account"
        app:layout_constraintTop_toBottomOf="@id/tvFullEmail"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@id/btnMyAccount"/>

    <com.bintangpoetra.thisable.presentation.view.ThisableSettingButton
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:menuIcon="@drawable/ic_help"
        app:menuTitle="@string/label_help" />

    <com.bintangpoetra.thisable.presentation.view.ThisableSettingButton
        android:id="@+id/btnFqa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp"
        app:menuIcon="@drawable/ic_fqa"
        app:menuTitle="@string/label_fqa" />

    <com.bintangpoetra.thisable.presentation.view.ThisableSettingButton
        android:id="@+id/btnReportBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFqa"
        app:menuIcon="@drawable/ic_report"
        app:menuTitle="@string/label_report_bug" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/ButtonContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:background="@drawable/bg_button"
        android:text="@string/action_logout"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btnReportBug" />

</androidx.constraintlayout.widget.ConstraintLayout>